# Chess-Engine

./: CMakeLists.txt  README.md  board.cpp  board.hpp  defenitions.hpp  engine.cpp  engine.hpp  magic_arrays.hpp  magic_bitboards.hpp  main.cpp  move.cpp  move.hpp  pieces.cpp  position.cpp  position.hpp  threadpool.hpp  transposition_table.hpp  util.cpp  util.hpp  zobrist.cpp
